Removed some tests that don't compile